Fixes possible/impossible null conditions, replaces occurrences of new Integer() and other minor fixes.